--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.10",
+    "mongodb": "^4.4.1",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
-},
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
