--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router-dom": "5.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
