--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.4.1",
     "morgan": "^1.10.0",
+    "react-redux": "^7.2.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
